plugins/extensions/resourcemanager/wdgtagselection.cpp
@@ -92,6 +92,7 @@ void KisWdgTagSelectionControllerOneResource::slotAddTag(KoID tag)
     if (m_resourceIds.count() == 0) return;
 
     KisTagSP tagsp = m_tagModel->tagForUrl(tag.id());
+
     Q_FOREACH(int resourceId, m_resourceIds) {
         m_tagResourceModel->tagResource(tagsp, resourceId);
     }
@@ -107,7 +108,10 @@ void KisWdgTagSelectionControllerOneResource::slotCreateNewTag(QString tag)
         QVector<KoResourceSP> vec;
         m_tagModel->addTag(tag, vec);
         tagsp = m_tagModel->tagForUrl(tag);
+    } else if (!tagsp->active()) {
+        m_tagModel->setTagActive(tagsp);
     }
+
     KIS_ASSERT_RECOVER_RETURN(tagsp);
     Q_FOREACH(int resourceId, m_resourceIds) {
         m_tagResourceModel->tagResource(tagsp, resourceId);
